--- a/weather/pom.xml
+++ b/weather/pom.xml
@@ -229,7 +229,15 @@
       </execution>
     </executions>
   </plugin>
-  
+  <plugin>
+		<groupId>org.apache.tomcat.maven</groupId>
+		<artifactId>tomcat7-maven-plugin</artifactId>
+		<version>2.2</version>
+		<configuration>
+          <port>9080</port>
+          <path>/weather</path>
+        </configuration>
+	</plugin>
         </plugins>
         
  
